# simala

./: .gitignore  cabal.project  cabal.project.freeze  simala.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
examples/: add2.simala  add3.simala  atom-concats.simala  atoms.simala  bool.simala  bool2.simala  decision.simala  decision2.simala  decisiondecl.simala  decisioninput.json  decisionmain.simala  eval1.simala  eval2.simala  eval3.simala  evenodd.simala  fractionals.simala  heterogeneous.simala  let.simala  letrec.simala  list.simala  list2.simala  mapfilter.simala  mapfilterprelude.simala  mysum.simala  prelude.simala  quoted.simala  record.simala  record2.simala  take.simala
examples/tests/: add.ep.golden  add2.ep.golden  atoms.ep.golden  atoms.golden  bool2.ep.golden  decision.golden  decision2.ep.golden  decision2.golden  decisiondecl.ep.golden  decisionmain.ep.golden  eval1.ep.golden  eval2.ep.golden  eval3.ep.golden  eval3.golden  evenodd.ep.golden  evenodd.golden  fractionals.golden  heterogeneous.ep.golden  heterogeneous.golden  let.golden  letrec.golden  list2.ep.golden  mapfilter.golden  mapfilterprelude.ep.golden  mapfilterprelude.golden  mysum.ep.golden  quoted.golden  record2.ep.golden  record2.golden  strings.ep.golden  strings.golden
lsp/: Main.hs
src/: Base.hs  SimplifiedMathLang.hs
src/Base/: Map.hs  Pretty.hs  Set.hs  Text.hs
src/Simala/: Main.hs  Repl.hs  TranspileToLam4.hs  Type.hs
src/Simala/Eval/: Monad.hs  Type.hs
src/Simala/Expr/: Evaluator.hs  ExactPrint.hs  Lexer.hs  Metadata.hs  Parser.hs  Render.hs  Type.hs
src/Simala/Json/: Parser.hs
src/Util/: RevList.hs
tests/: Main.hs
transition-system/: transition-system.cabal
transition-system/src/: TransitionSystem.hs
vscode/: README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
