cabal-version: 3.0
name: simala
version: 0.1
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options: -Wall
  default-extensions:
    DerivingStrategies
    DerivingVia
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
  build-depends:
    base

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    base,
    aeson,
    containers,
    haskeline,
    megaparsec,
    mtl,
    optics,
    optparse-applicative,
    parser-combinators,
    prettyprinter,
    text
  exposed-modules:
    Base
    Base.Map
    Base.Pretty
    Base.Set
    Base.Text
    Simala.Eval.Monad
    Simala.Eval.Type
    Simala.Expr.Evaluator
    Simala.Expr.Parser
    Simala.Expr.Render
    Simala.Expr.Type
    Simala.Json.Parser
    Simala.Main
    Simala.Repl
    Util.RevList

executable simala
  import: defaults
  hs-source-dirs: app
  build-depends:
    simala
  main-is: Main.hs

test-suite simala-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    base,
    directory,
    filepath,
    hspec,
    hspec-golden,
    silently,
    simala
