cabal-version: 3.0
name: simala
version: 0.1
build-type: Simple
tested-with: GHC ==9.6.6

common defaults
  default-language: GHC2021
  ghc-options: -Wall
  default-extensions:
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
  build-depends:
    base

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    base,
    aeson,
    containers,
    haskeline,
    megaparsec,
    mtl,
    optics,
    optparse-applicative,
    parser-combinators,
    prettyprinter,
    text
  exposed-modules:
    Base
    Base.Map
    Base.Pretty
    Base.Set
    Base.Text
    Simala.Eval.Monad
    Simala.Eval.Type
    Simala.Expr.Evaluator
    Simala.Expr.ExactPrint
    Simala.Expr.Lexer
    Simala.Expr.Metadata
    Simala.Expr.Parser
    Simala.Expr.Render
    Simala.Expr.Type
    Simala.Json.Parser
    Simala.Main
    Simala.Repl
    Util.RevList

executable simala
  import: defaults
  hs-source-dirs: app
  build-depends:
    simala
  main-is: Main.hs

executable simala-lsp
  import: defaults
  hs-source-dirs: lsp
  build-depends:
    simala,
    aeson,
    containers,
    directory,
    filepath,
    lens,
    lsp-types ^>=2.3.0.0,
    lsp ^>=2.7.0.0,
    text,
    text-rope,
    transformers,
  main-is: Main.hs

test-suite simala-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Paths_simala
  build-depends:
    base,
    directory,
    filepath,
    Glob,
    hspec,
    hspec-golden,
    silently,
    simala
