cabal-version: 3.0
name: transition-system
version: 0.1
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options: -Wall

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    base,
    containers,
    fgl,
    graphviz,
    prettyprinter,
    simala
  exposed-modules:
    TransitionSystem
